<resources>
    <string-array name="symptomsArray">
        <item>@string/acne</item>
        <item>@string/backache</item>
        <item>@string/bloating</item>
        <item>@string/blood_clots</item>
        <item>@string/cramps</item>
        <item>@string/dizziness</item>
        <item>@string/fatigue</item>
        <item>@string/headache</item>
        <item>@string/insomnia</item>
        <item>@string/nausea</item>
        <item>@string/stomachache</item>
        <item>@string/tender_breasts</item>
    </string-array>

    <string-array name="moodsArray">
        <item>@string/angry</item>
        <item>@string/anxious</item>
        <item>@string/blah</item>
        <item>@string/calm</item>
        <item>@string/confused</item>
        <item>@string/depressed</item>
        <item>@string/fine</item>
        <item>@string/happy</item>
        <item>@string/hyper</item>
        <item>@string/in_love</item>
        <item>@string/irritable</item>
        <item>@string/sad</item>
        <item>@string/sick</item>
        <item>@string/stressed</item>
        <item>@string/tired</item>
    </string-array>

    <string-array name="hygieneArray">
        <item>@string/light_pads</item>
        <item>@string/medium_pads</item>
        <item>@string/heavy_pads</item>
        <item>@string/light_tampons</item>
        <item>@string/medium_tampons</item>
        <item>@string/heavy_tampons</item>
        <item>@string/menstrual_cups</item>
    </string-array>

    <string name="app_name">P-Journal</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_a_note">Add a note...</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="app_icon">App icon</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="search_notes">Search Notes</string>
    <string name="resources">Resources</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="plannedparenthood_org">PlannedParenthood.org</string>
    <string name="womenshealth_gov">WomensHealth.gov</string>
    <string name="words_to_know">Words to Know</string>
    <string name="p_journal_faqs">P-Journal FAQs</string>
    <string name="note_saved">Note saved</string>
    <string name="angry">angry</string>
    <string name="anxious">anxious</string>
    <string name="blah">blah</string>
    <string name="calm">calm</string>
    <string name="confused">confused</string>
    <string name="depressed">depressed</string>
    <string name="fine">fine</string>
    <string name="happy">happy</string>
    <string name="hyper">hyper</string>
    <string name="in_love">in love</string>
    <string name="irritable">irritable</string>
    <string name="sad">sad</string>
    <string name="sick">sick</string>
    <string name="stressed">stressed</string>
    <string name="tired">tired</string>
    <string name="acne">acne</string>
    <string name="backache">backache</string>
    <string name="bloating">bloating</string>
    <string name="blood_clots">blood clots</string>
    <string name="cramps">cramps</string>
    <string name="dizziness">dizziness</string>
    <string name="fatigue">fatigue</string>
    <string name="headache">headache</string>
    <string name="insomnia">insomnia</string>
    <string name="stomachache">stomachache</string>
    <string name="tender_breasts">tender breasts</string>
    <string name="nausea">nausea</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="light_tampons">Light Tampons</string>
    <string name="medium_tampons">Medium Tampons</string>
    <string name="heavy_tampons">Heavy Tampons</string>
    <string name="light_pads">Light Pads</string>
    <string name="medium_pads">Medium Pads</string>
    <string name="heavy_pads">Heavy Pads</string>
    <string name="menstrual_cups">Menstrual Cups</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="note_updated">Note updated</string>
    <string name="moods">Moods</string>
    <string name="symptoms">Symptoms</string>
    <string name="are_you_sure_delete_data">Are you sure you want to delete all your data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="summary">Summary</string>
    <string name="etNote_placeholder">Write notes here... Anything unusual? Thoughts? Important events?</string>
    <string name="period_started_today">Period started today</string>
    <string name="period_ended_today">Period ended today</string>
    <string name="in_your_average_cycle">in your average cycle</string>
    <string name="in_your_average_period">in your average period</string>
    <string name="x_days">%1$d days</string>
    <string name="not_enough_information">Not enough information</string>
</resources>
