<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="FRAGMENT_MOODS"
    android:scrollbars="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        
        <CheckBox
            android:id="@+id/cbAngry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angry"/>

        <CheckBox
            android:id="@+id/cbAnxious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anxious"/>

        <CheckBox
            android:id="@+id/cbBlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blah"/>

        <CheckBox
            android:id="@+id/cbConfused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confused"/>

        <CheckBox
            android:id="@+id/cbCalm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calm"/>

        <CheckBox
            android:id="@+id/cbDepressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depressed"/>

        <CheckBox
            android:id="@+id/cbFine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fine"/>

        <CheckBox
            android:id="@+id/cbHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy"/>

        <CheckBox
            android:id="@+id/cbHyper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hyper"/>

        <CheckBox
            android:id="@+id/cbInLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_love"/>

        <CheckBox
            android:id="@+id/cbIrritable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/irritable"/>

        <CheckBox
            android:id="@+id/cbSad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sad"/>

        <CheckBox
            android:id="@+id/cbSick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sick"/>

        <CheckBox
            android:id="@+id/cbStressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stressed"/>

        <CheckBox
            android:id="@+id/cbTired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tired"/>
    </LinearLayout>
</ScrollView>
