<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="FRAGMENT_SYMPTOMS"
    android:scrollbars="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <!--<GridView-->
            <!--android:id="@+id/gvSymptoms"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:numColumns="3"-->
            <!--android:verticalSpacing="24dp"-->
            <!--android:horizontalSpacing="10dp"-->
            <!--android:stretchMode="spacingWidthUniform"-->
            <!--/>-->

        <ToggleButton
            android:id="@+id/tbAcne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/acne"
            android:textOff="@string/acne"/>

        <ToggleButton
            android:id="@+id/tbBackache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/backache"
            android:textOff="@string/backache"/>

        <ToggleButton
            android:id="@+id/tbBloating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/bloating"
            android:textOff="@string/bloating"/>

        <ToggleButton
            android:id="@+id/tbBloodClots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/blood_clots"
            android:textOff="@string/blood_clots"/>

        <ToggleButton
            android:id="@+id/tbCramps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/cramps"
            android:textOff="@string/cramps"/>

        <ToggleButton
            android:id="@+id/tbDizziness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/dizziness"
            android:textOff="@string/dizziness"/>

        <ToggleButton
            android:id="@+id/tbFatigue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/fatigue"
            android:textOff="@string/fatigue"/>

        <ToggleButton
            android:id="@+id/tbHeadache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/headache"
            android:textOff="@string/headache"/>

        <ToggleButton
            android:id="@+id/tbInsomnia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/insomnia"
            android:textOff="@string/insomnia"/>

        <ToggleButton
            android:id="@+id/tbNausea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/nausea"
            android:textOff="@string/nausea"/>

        <ToggleButton
            android:id="@+id/tbStomachache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/stomachache"
            android:textOff="@string/stomachache"/>

        <ToggleButton
            android:id="@+id/tbTenderBreasts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/tender_breasts"
            android:textOff="@string/tender_breasts"/>

    </LinearLayout>
</ScrollView>
