<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="FRAGMENT_NOTE">

    <CheckBox
        android:id="@+id/cbStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/period_started_today"/>

    <CheckBox
        android:id="@+id/cbEnded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/period_ended_today"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/etNoteText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|left"
        android:padding="10dp"
        android:hint="@string/etNote_placeholder" />

</LinearLayout>